<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- 어플리케이션 이름 -->
    <string name="app_name">아모르 경보시스템</string>

    <!-- 기본값 -->
    <string name="main_safeLevel">현재 안전레벨: 안전</string>
    <string name="main_area">위험 구역: 없음</string>
    <string name="sensor_status">- 현재상태: 안전</string>
    <string name="sensor_waterLevel">- 수위: 0cm</string>

    <!-- 연결 화면 -->
    <string name="userId">아이디</string>
    <string name="passWord">비밀번호</string>
    <string name="connectBtn">연결</string>

    <!-- 주 화면 -->
    <string name="backBtn">←연결화면으로</string>
    <string name="currStatus">안전진단</string>
    <string name="management">제품 관리</string>
    <string name="additional">추가 정보</string>

    <!-- 제품 관리 화면 -->
    <string name="register">제품 등록</string>
    <string name="modify">제품 수정</string>
    <string name="delete">제품 삭제</string>

    <!-- 추가 정보 화면 -->
    <string name="emergency">응급환자발생: 119</string>
    <string name="flood" tools:ignore="TypographyDashes">침수관련: 02-000-0000</string>
    <string name="electricity" tools:ignore="TypographyDashes">전기관련: 02–000-0000</string>
    <string name="shelter">대피소</string>
    <string name="shelterLocation">대피소 위치</string>
    <string name="shelterStatus">대피소 현황</string>

    <!-- 제품 등록 화면 -->
    <string name="topic">시리얼 번호</string>
    <string name="location">경보기 위치</string>
    <string name="registerBtn">등록</string>

    <!-- 제품 수정 화면 -->
    <string name="adoptBtn">적용</string>

    <!-- 제품 삭제 화면 -->
    <string name="deleteBtn">삭제</string>
</resources>