<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".AdditionalInfomationActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/additional"
        android:textColor="@color/textColour"
        android:textSize="25sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/emergency"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/flood"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:text="@string/electricity"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/shelter"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <Button
        android:id="@+id/shelterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/shelterLocation"
        android:textSize="25sp" />

    <Button
        android:id="@+id/shelterStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/shelterStatus"
        android:textSize="25sp" />

</LinearLayout>