<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".ManagementActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/management"
        android:textColor="@color/textColour"
        android:textSize="25sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/modify"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="25sp" />

</LinearLayout>