<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textColor="@color/textColour"
        android:textSize="25sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:hint="@string/topic"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textColorHint="@color/textColour"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:hint="@string/location"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textColorHint="@color/textColour"
        android:textSize="30sp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="50dp"
        android:text="@string/registerBtn"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:backgroundTint="@color/purple_200" />

</LinearLayout>