<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentStatus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".CurrentStatusActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/currStatus"
        android:textColor="@color/textColour"
        android:textSize="25sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/curSfLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/main_safeLevel"
        android:textColor="@color/textColour"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/danArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/main_area"
        android:textColor="@color/textColour"
        android:textSize="25sp"/>

</LinearLayout>