<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="220dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:hint="@string/userId"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textColorHint="@color/textColour"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passWord"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:autofillHints="password"
        android:hint="@string/passWord"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textColorHint="@color/textColour"
        android:textSize="30sp" />

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="50dp"
        android:text="@string/connectBtn"
        android:textColor="@color/textColour"
        android:textSize="25sp"
        android:backgroundTint="@color/purple_200" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/textColour"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0" />

</LinearLayout>